# gammacombo

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.build  README.md  State_of_development.md
.github/workflows/: main.yml  push_users.list
ci_logs/: index.html
cmake/: FindROOT.cmake  combiners.cmake  macros.cmake  settings.cmake
core/include/: BatchScriptWriter.h  CLInterval.h  CLIntervalMaker.h  CLIntervalPrinter.h  ColorBuilder.h  Combiner.h  ConfidenceContours.h  Contour.h  ControlPlots.h  ExternalScanWrapper.h  FileNameBuilder.h  FitResultCache.h  FitResultDump.h  Fitter.h  GammaComboEngine.h  Graphviz.h  LatexMaker.h  MethodAbsScan.h  MethodBergerBoosScan.h  MethodCoverageScan.h  MethodDatasetsPluginScan.h  MethodDatasetsProbScan.h  MethodGenericPluginScan.h  MethodPluginScan.h  MethodProbScan.h  OneMinusClPlot.h  OneMinusClPlot2d.h  OneMinusClPlotAbs.h  OptParser.h  PDF_Abs.h  PDF_Datasets.h  PDF_Datasets_Abs.h  PDF_Generic_Abs.h  PValueCorrection.h  Parameter.h  ParameterCache.h  ParameterEvolutionPlotter.h  ParametersAbs.h  ProgressBar.h  PullPlotter.h  (+17 more)
core/include/tclap/: Arg.h  ArgException.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h  ZshCompletionOutput.h
core/src/: BatchScriptWriter.cpp  CLInterval.cpp  CLIntervalMaker.cpp  CLIntervalPrinter.cpp  ColorBuilder.cpp  Combiner.cpp  ConfidenceContours.cpp  Contour.cpp  ControlPlots.cpp  ExternalScanWrapper.cpp  FileNameBuilder.cpp  FitResultCache.cpp  FitResultDump.cpp  Fitter.cpp  GammaComboEngine.cpp  Graphviz.cpp  LatexMaker.cpp  MethodAbsScan.cpp  MethodBergerBoosScan.cpp  MethodCoverageScan.cpp  MethodDatasetsPluginScan.cpp  MethodDatasetsProbScan.cpp  MethodGenericPluginScan.cpp  MethodPluginScan.cpp  MethodProbScan.cpp  OneMinusClPlot.cpp  OneMinusClPlot2d.cpp  OneMinusClPlotAbs.cpp  OptParser.cpp  PDF_Abs.cpp  PDF_Datasets.cpp  PDF_Datasets_Abs.cpp  PDF_Generic_Abs.cpp  PValueCorrection.cpp  Parameter.cpp  ParameterCache.cpp  ParameterEvolutionPlotter.cpp  ParametersAbs.cpp  ProgressBar.cpp  PullPlotter.cpp  (+14 more)
doc/: Doxyfile.in
scripts/: HFAGLabel.C  check_batch_jobs.py  deep_git.py  dressPlot.py  gc.mplstyle  gc_mpl.py  gc_mpl_tools.py  make_coverage_table.py  make_html.py  plot1Dfrom2D.py  plotModuleExample.py  plotScanBestPluginToys.py  pyfitres.py  run_ci_tests.py  setup-env-cvmfs.sh  setup_lxplus.sh
tutorial/: CMakeLists.txt  Snakefile  cls_from_toys.py  cls_test.py
tutorial/Workspaces/: Lb2Lemu_wsOld_GC3_Toy1.root  Lb2Lemu_wsOld_GC3_fitRange.root  Lb2Lemu_wsOld_WithPDFs.root
tutorial/cartesian/include/: PDF_Cartesian.h  PDF_rb.h  ParametersCartesian.h
tutorial/cartesian/main/: cartesian.cpp
tutorial/cartesian/src/: PDF_Cartesian.cpp
tutorial/include/: LinkDef.h  PDF_Cartesian.h  PDF_Circle.h  PDF_CrossCorAbs.h  PDF_CrossCor_GausA_vs_GausB.h  PDF_DatasetCustom.h  PDF_DatasetManual.h  PDF_DatasetOldFitting.h  PDF_DatasetTutorial.h  PDF_DoubleCB.h  PDF_GGSZ.h  PDF_GGSZ_cartesian.h  PDF_Gaus.h  PDF_Gaus2d.h  PDF_GausB.h  PDF_rb.h  ParametersCartesian.h  ParametersGamma.h  ParametersTutorial.h  RooDoubleCB.h
tutorial/main/: cartesian.cpp  multipdftest.cpp  tutorial.cpp  tutorial2.cpp  tutorial_dataset.cpp  tutorial_dataset_build_workspace.cpp  tutorial_dataset_multipdf.cpp  tutorial_dataset_multipdf_build_workspace.cpp  tutorial_gamma.cpp
tutorial/src/: PDF_Cartesian.cpp  PDF_Circle.cpp  PDF_CrossCorAbs.cpp  PDF_CrossCor_GausA_vs_GausB.cpp  PDF_DatasetCustom.cpp  PDF_DatasetManual.cpp  PDF_DatasetOldFitting.cpp  PDF_DatasetTutorial.cpp  PDF_DoubleCB.cpp  PDF_GGSZ.cpp  PDF_GGSZ_cartesian.cpp  PDF_Gaus.cpp  PDF_Gaus2d.cpp  PDF_GausB.cpp  PDF_rb.cpp  ParametersCartesian.cpp  ParametersGamma.cpp  ParametersTutorial.cpp  RooDoubleCB.cpp  add
tutorial/tutorial_dataset/: CMakeLists.txt
tutorial/tutorial_dataset/include/: PDF_Dataset.h
tutorial/tutorial_dataset/main/: tutorial_data.cpp
tutorial/tutorial_dataset/src/: PDF_Dataset.cpp
tutorial_dataset/: CMakeLists.txt
tutorial_dataset/include/: PDF_DatasetTutorial.h
tutorial_dataset/main/: tutorial_dataset.cpp
tutorial_dataset/src/: PDF_DatasetTutorial.cpp
